@@ -1,4 +1,7 @@
 tar-ignore = ".#*"
+tar-ignore = "*.diff"
+tar-ignore = "*.d"
+tar-ignore = "*.o"
 tar-ignore = "*_"
 tar-ignore = "*.crl"
 #tar-ignore = "*.crt"
@@ -12,8 +15,16 @@ tar-ignore = "*.mp4"
 tar-ignore = "*.pdf"
 #tar-ignore = "*.pem"
 tar-ignore = "*.zip"
-tar-ignore = ".git/*"
+tar-ignore = .git
+tar-ignore = Makefile
+tar-ignore = CMakeCache.txt
+tar-ignore = CMakeFiles
+tar-ignore = *.cmake
+tar-ignore = install_manifest.txt
+tar-ignore = attic
+tar-ignore = siemens_extern
 tar-ignore = kanz
+tar-ignore = creds
 tar-ignore = tmp
 tar-ignore = tmp.*
 tar-ignore = .tracecompass
@@ -36,6 +47,11 @@ tar-ignore = lib
 tar-ignore = mk
 tar-ignore = stage
 tar-ignore = test/results
+tar-ignore = Mock
+tar-ignore = Insta
+tar-ignore = Simple
+tar-ignore = cmpClient
+tar-ignore = libgencmp.so*
 tar-ignore = run
 tar-ignore = run_
 tar-ignore = libcmp*
